--- a/k4p2.html
+++ b/k4p2.html
@@ -776,7 +776,7 @@
 			<div class="col">
 				<div class="col-lg-12 text-center">
 					<h1 class="mt-4">Wykresy słupkowe</h1>
-					<p class="lead">Poprawione i zaktualizowane wykresy słupkowe z podręcznika geografii „Planeta Nowa - klasy VI - VIII Nowa Era"</p>
+					<p class="lead"></p>
 					<div class="col-sm onemore">	
 						<div class="row">
 	<div class="col-sm-4">
