--- a/ostronie.html
+++ b/ostronie.html
@@ -45,14 +45,14 @@
 			<h1 class="mt-4">O stronie</h1>
 		</div>
 		<div class="col-sm">
-			<p>Witryna Geowykresy umożliwia swobodny i darmowy dostęp do materiałów geograficznych, wykonanych na podstawie zamieszczonych w podręcznikach geografii „Planeta Nowa” wydawnictwa Nowej Ery  wykresów i map statystycznych.
+			<p>Witryna Geowykresy umożliwia swobodny i darmowy dostęp do materiałów geograficznych.
 			</p><p>Materiały zostały zaktualizowane i zaprezentowane za pomocą wykresów liniowych, wykresów słupkowych oraz map statystycznych, przy użyciu oprogramowania RStudio. Wykorzystane dane pochodzą z World Banku i Banku Danych Lokalnych. 
 			</p><p>Zawarte pomoce dydaktyczne dostępne są na licencji Creative Commons, Uznanie Autorstwa 4.0 Polska CC-BY, co oznacza, iż pod warunkiem oznaczenia autora wolno je kopiować, rozprowadzać i przedstawiać.
 			</p><p>Kod źródłowy pracy został umieszczony w formie repozytorium na serwisie Github pod adresem:</p>
 			<a href="https://github.com/geowykresy/geowykresy.github.io">https://github.com/geowykresy/geowykresy.github.io</a>
 			
 			<p>Tabela poniżej przedstawia nazwę zmiennych wraz z tytułami, odpowiadających konkretnym mapom i wykresom zamieszczonym na stronie. W kodzie źródłowym istnieje możliwość sprawdzenia w jaki sposób zostały pobrane i zwizualizowne dane. </p>
-			<img src="images/tabela.png" width="50%" style="margin: 10px; margin-left: 25%">
+			<img src="images/tabela1.png" width="50%" style="margin: 10px; margin-left: 25%">
 			
 			<p>Strona powstała w ramach pracy inżynierskiej.</p>
 			<p><br></p>
