--- a/k4p1.html
+++ b/k4p1.html
@@ -322,7 +322,7 @@
 		<div class="col">
 			<div class="col-lg-12 text-center">
 				<h1 class="mt-4">Wykresy liniowe</h1>
-				<p class="lead">Poprawione i zaktualizowane wykresy liniowe z podręcznika geografii „Planeta Nowa - klasy VI - VIII Nowa Era"</p>
+				<p class="lead"></p>
 				<div class="col-sm onemore">	
 					<div class="row">
 						  <div class="col-sm-4">
