--- a/k4p3.html
+++ b/k4p3.html
@@ -114,7 +114,7 @@ function exit() {
 		<div class="col">
 			<div class="col-lg-12 text-center">
 				<h1 class="mt-4">Mapy</h1>
-				<p class="lead">Poprawione i zaktualizowane wykresy z podręcznika geografii „Planeta Nowa - klasy VI - VIII Nowa Era"</p>
+				<p class="lead"></p>
 				<div class="col-sm onemore">	
 					<div class="row">
 						  <div class="col-sm-4">
